[gd_scene load_steps=5 format=2]

[ext_resource path="res://developer_console/developer_console.gd" type="Script" id=1]
[ext_resource path="res://fonts/Montserrat-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="DeveloperConsole" type="Node2D"]
script = ExtResource( 1 )

[node name="Console" type="Node2D" parent="."]

[node name="Text" type="RichTextLabel" parent="Console"]
margin_right = 381.0
margin_bottom = 260.0
custom_fonts/normal_font = SubResource( 1 )
text = "rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich rich "
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Console"]
margin_left = 1.0
margin_top = 276.0
margin_right = 375.0
margin_bottom = 307.0
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="clear" from="." to="." method="_on_DeveloperConsole_clear"]
[connection signal="console_toggle" from="." to="." method="_on_DeveloperConsole_console_toggle"]
[connection signal="echo" from="." to="." method="_on_DeveloperConsole_echo"]
[connection signal="multiply" from="." to="." method="_on_DeveloperConsole_multiply"]
[connection signal="text_entered" from="Console/LineEdit" to="." method="_on_LineEdit_text_entered"]
